--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
-import edu.wpi.first.gradlerio.GradleRIOPlugin
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.10'
-    id "edu.wpi.first.GradleRIO" version "2020.1.2"
+    id 'org.jetbrains.kotlin.jvm' version "1.3.61"
+    id "edu.wpi.first.GradleRIO" version "2019.4.1"
 }
 
 def MAIN_CLASS = "org.team2471.FRC2020.Main"
@@ -29,8 +28,8 @@ deploy {
 
 repositories {
     mavenCentral()
-    maven { setUrl("http://first.wpi.edu/FRC/roborio/maven/release") }
    maven { setUrl("https://plugins.gradle.org/m2/")}
+    maven { setUrl("http://first.wpi.edu/FRC/roborio/maven/release") }
     maven { setUrl("http://devsite.ctr-electronics.com/maven/release/") }
     maven { setUrl("http://maven.highcurrent.io/maven") }
     maven { setUrl("http://www.revrobotics.com/content/sw/max/sdk/maven/") }
@@ -42,7 +41,7 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.10"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
     compile project("meanlib")
 }
 
@@ -52,7 +51,7 @@ dependencies {
 jar {
     //noinspection GroovyAssignabilityCheck
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    manifest GradleRIOPlugin.javaManifest(MAIN_CLASS)
+    manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(MAIN_CLASS)
 }
 
 compileKotlin {
