--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,6 @@ dependencies {
     nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
 
-
     implementation wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
@@ -68,8 +67,8 @@ dependencies {
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
-    compile project("meanlib")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
+    implementation project("meanlib")
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
