--- a/build.gradle
+++ b/build.gradle
@@ -53,11 +53,11 @@ repositories {
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
-    implementation wpi.deps.wpilib()
+    api wpi.deps.wpilib()
     nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
 
-    implementation wpi.deps.vendor.java()
+    api wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
@@ -68,6 +68,8 @@ dependencies {
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+
     implementation project("meanlib")
 }
 
