Change RobotProgram to class from interface

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
-def ROBOT_MAIN_CLASS = "org.team2471.FRC2020.Main"
+def ROBOT_MAIN_CLASS = "org.team2471.frc2020.Main"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
