--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,18 @@ import edu.wpi.first.gradlerio.GradleRIOPlugin
 plugins {
     id "java"
     id 'org.jetbrains.kotlin.jvm' version "1.3.61"
-    id "edu.wpi.first.GradleRIO" version "2020.3.2"
+    id "edu.wpi.first.GradleRIO" version "2021.3.1"
+    id "com.github.gmazzo.buildconfig" version "3.0.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
 def ROBOT_MAIN_CLASS = "org.team2471.frc2020.Main"
+
+buildConfig {
+    buildConfigField("long", "BUILD_TIME", "${System.currentTimeMillis()}L")
+}
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
@@ -71,6 +76,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+    implementation 'com.github.gmazzo.buildconfig:com.github.gmazzo.buildconfig.gradle.plugin:3.0.0'
 
     implementation project("meanlib")
 }
