--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,14 @@ import edu.wpi.first.gradlerio.GradleRIOPlugin
 
 plugins {
     id "java"
-    id 'org.jetbrains.kotlin.jvm' version "1.3.61"
-    id "edu.wpi.first.GradleRIO" version "2020.3.2"
+    id 'org.jetbrains.kotlin.jvm' version "1.5.31"
+    id "com.github.gmazzo.buildconfig" version "3.0.0"
+    id "edu.wpi.first.GradleRIO" version "2021.3.1"
+}
+
+
+buildConfig {
+    buildConfigField("long", "BUILD_TIME", "${System.currentTimeMillis()}L")
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -47,10 +53,7 @@ repositories {
     mavenCentral()
     maven { setUrl("https://frcmaven.wpi.edu/artifactory/release/")}
     maven { setUrl("https://plugins.gradle.org/m2/")}
-    maven { setUrl("http://first.wpi.edu/FRC/roborio/maven/release") }
-    maven { setUrl("http://devsite.ctr-electronics.com/maven/release/") }
-    maven { setUrl("http://maven.highcurrent.io/maven") }
-    maven { setUrl("http://www.revrobotics.com/content/sw/max/sdk/maven/") }
+    maven { setUrl("https://first.wpi.edu/FRC/roborio/maven/release") }
 }
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
@@ -69,9 +72,9 @@ dependencies {
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
-
+    implementation 'com.github.gmazzo.buildconfig:com.github.gmazzo.buildconfig.gradle.plugin:3.0.0'
     implementation project("meanlib")
 }
 
@@ -79,14 +82,11 @@ dependencies {
 // in order to make them all available at runtime. Also adding the manifest so WPILib
 // knows where to look for our Robot Class.
 jar {
-    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+ //   from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
 
 compileKotlin {
     kotlinOptions.jvmTarget = "11"
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "11"
+    kotlinOptions.freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
 }
