--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import edu.wpi.first.gradlerio.GradleRIOPlugin
 
 plugins {
     id "java"
-    id 'org.jetbrains.kotlin.jvm' version "1.3.61"
+    id 'org.jetbrains.kotlin.jvm' version "1.5.31"
     id "edu.wpi.first.GradleRIO" version "2021.3.1"
     id "com.github.gmazzo.buildconfig" version "3.0.0"
 }
@@ -55,7 +55,7 @@ repositories {
     maven { setUrl("http://first.wpi.edu/FRC/roborio/maven/release") }
     maven { setUrl("http://devsite.ctr-electronics.com/maven/release/") }
     maven { setUrl("http://maven.highcurrent.io/maven") }
-    maven { setUrl("http://www.revrobotics.com/content/sw/max/sdk/maven/") }
+    maven { setUrl("http://maven.revrobotics.com/") }
 }
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
